--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -14,5 +14,5 @@ Complete the following procedure to add an Amazon EC2 cloud provider in {product
   The *Access Key ID* acts as your *User ID*, and your *Secret Access Key* acts as your *Password*.
 .. Click *Validate* to validate the credentials.
 . Click the *SmartState Docker* tab.
-.. Enter the *SmartState Docker User Name* and *SmartState Docker Password*. These credentials are used for accessing the Docker container images registry required to perform SmartState analysis on AWS.
+.. Enter the *SmartState Docker User Name* and *SmartState Docker Password*. Here use your RHN credentials required to perform SmartState analysis on AWS. These credentials are required so that you can pull the image from the Red Hat docker registry.
 . Click *Add*.
