Modified the advanced settings steps for clarity.

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -70,7 +70,7 @@ In OpenShift, the default deployment of the router generates certificates during
 .. Enter the *Image-Inspector Repository* information. For example, `openshift3/image-inspector`.
 .. Enter the *Image-Inspector Registry* information. For example, `registry.access.redhat.com`.
 .. Enter the *Image-Inspector Tag* value. A tag is a mark used to differentiate images in a repository, typically by the application version stored in the image.
-.. Enter the *CVE location*.
+.. Enter `https://www.redhat.com/security/data/metrics/ds/` in *CVE location*.
 . Click *Add*.
 
 [NOTE]
