--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -260,7 +260,7 @@ endif::cfme[]
 [[load-balancer-ssui-addl-config]]
 ==== Configuring Appliances using a Load Balancer and the Self Service User Interface
 
-Running several user interface worker appliances behind a load balancer can cause login issues from the Self Service user interface because `memcached`, the service storing the session in memory, is not shared between the appliances. To prevent this, configure your environment to run the `memcached` service on one appliance and have it shared with the other appliances.
+Running several user interface appliances behind a load balancer can cause login issues from the Self Service user interface because `memcached`, the service storing the session in memory, is not shared between the appliances. To prevent this, configure your environment to run the `memcached` service on one appliance and have it shared with the other appliances.
 
 [IMPORTANT]
 ====
