added SELinux command in prepping section

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -215,6 +215,13 @@ imagePolicyConfig:
 ----
 $ systemctl restart atomic-openshift-master
 ----
+. On each OpenShift node, persistently enable the `container_manage_cgroup` SELinux boolean to allow container processes to make changes to _cgroup_ configuration:
++
+----
+# setsebool -P container_manage_cgroup on
+----
+
+
 
 
 
