--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -221,12 +221,7 @@ Deploying multiple user interface worker appliances and placing them behind a th
 
 ==== Configuring Worker Appliances for Load Balancing
 
-When using a load balancer, configure appliances that have the *User Interface* role enabled to store session data in the database. As a result, the user does not need to re-login if the load balancer redirects them to an alternative server in case the original user interface worker is unresponsive. 
-
-[IMPORTANT]
-====
-This configuration can cause login issues for the Self Service User Interface. If your environment uses a load balancer and access via the Self Service User Interface, do not follow the steps in this section. Instead, configure the appliances to store session data in `memcached` on one appliance, as described in xref:load-balancer-ssui-addl-config[].
-====
+When using a load balancer, configure appliances that have the *User Interface* role enabled to store session data in the database. As a result, the user does not need to re-login if the load balancer redirects them to an alternative server in the case the original user interface worker is unresponsive. 
 
 On each appliance, configure the session data storage location using the `session_store` parameter within the advanced settings page in the {product-title_short} user interface:
 
@@ -256,61 +251,6 @@ Also see https://access.redhat.com/documentation/en-us/reference_architectures/2
 For information on configuring database failover in VMDB appliances, see the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/high_availability_guide/[_High Availability Guide_].
 endif::cfme[]
 
-
-[[load-balancer-ssui-addl-config]]
-==== Configuring Appliances using a Load Balancer and the Self Service User Interface
-
-Running several user interface appliances behind a load balancer can cause login issues from the Self Service user interface because `memcached`, the service storing the session in memory, is not shared between the appliances. To prevent this, configure your environment to run the `memcached` service on one appliance and have it shared with the other appliances.
-
-[IMPORTANT]
-====
-When using this configuration, always start the appliance that owns `memcached` first, and ensure that `memcached` is running before starting the additional appliances. Starting another appliance before the `memcached` appliance may result in starting or login issues.
-====
-
-The following example shows configuration on two appliances, `appliance1` and `appliance2`:
-
-. On `appliance1`, open the 11211 port in the firewall:
-+
-----
-# firewall-cmd --add-port=11211/tcp --permanent
-# firewall-cmd --reload
-----
-+
-. From the user interface on `appliance1`, configure the server's advanced settings by navigating to the settings menu, selecting *Configuration*, then the *Advanced* tab:
-+
-----
-:session:
-  :memcache_server: 127.0.0.1:11211
-  :memcache_server_opts: "-l 0.0.0.0 -I 1M"
-----
-+
-This configures `memcached` to run on `appliance1`, but listen to all servers (`-l 0.0.0.0`). The `memcache_server` line, which specifies where it connects to, remains set as itself (127.0.0.1).
-+
-. Click *Save*.
-. Restart `appliance1`:
-+
-----
-# systemctl restart evmserverd
-----
-
-. Configure `appliance2` to point to `appliance1` by specifying the IP address for `appliance1` in the `memcache_server` line. Configure this in the server's advanced settings from the appliance user interface, by navigating to the settings menu, selecting *Configuration*, then the *Advanced* tab:
-+
-----
-:session:
-  :memcache_server: <appliance1>:11211        
-  :memcache_server_opts: "-l 127.0.0.1 -I 1M"   
-----
-+
-. Click *Save*.
-. Restart `appliance2`:
-+
-----
-# systemctl restart evmserverd
-----
-
-You can then get an API token from `appliance1`, and use it to access the API from `appliance2`. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/red_hat_cloudforms_rest_api/#using-authentication-tokens[Using Authentication Tokens] in the _REST API_ guide for instructions.
-
-The shared `memcached` service now runs only on `appliance1`, and any other appliance accesses `memcached` from that appliance. Configure additional appliances with the steps for `appliance2`.
 
 
 
