--- a/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
@@ -43,7 +43,7 @@ To upload the {product-title} Google Compute Engine appliance file you will need
 You can upload the appliance with the following steps:
 
 . Log in to the Google Cloud Platform dashboard.
-. Click on *Home* in the top left of the screen.
+. Click *Home* in the top left of the screen.
 . Click image:GCE-products-services.png[] to show the *Products and Services* menu. Click *Storage*.
 . Create a bucket by clicking *Create Bucket*, and configure the following details:
 .. Enter a unique *Name* for the bucket using lower case alphanumeric characters, hyphens, and/or underscores.
