--- a/doc-High_Availability_Guide/topics/HAProxy.adoc
+++ b/doc-High_Availability_Guide/topics/HAProxy.adoc
@@ -388,3 +388,16 @@ The backup node (`cf-hap2`) shows the following:
 
 
 Your environment is now configured for high availability.
+
+[IMPORTANT]
+====
+The following additional configuration in the {product-title_short} user interface worker appliances and the load balancer are recommended for improved performance in worker appliances:
+
+* For each {product-title_short} appliance behind the load balancer, change the `session_store` setting to `sql` in the appliance's advanced settings.
+* Configure sticky sessions in the load balancer.
+* Configure the load balancer to test for appliance connectivity using the `https://appliance_name/ping` URL.
+
+ifdef::cfme[]
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/deployment_planning_guide/planning#load-balancer[Using a Load Balancer] in the _Deployment Planning Guide_ for more details on these configuration steps.
+endif::cfme[]
+====
