Applying minor review edits to the common content in the OpenSCAP config in CF doc.

--- a/common/openscap/generating-openscap-report-failed-images.adoc
+++ b/common/openscap/generating-openscap-report-failed-images.adoc
@@ -16,12 +16,12 @@ To create a report showing image compliance:
 
 image:failedimagescan.png[]
 
-. Click  image:reload.png[] *(Reload current display)* to update the status.
+. Click  image:reload.png[] *(Refresh this page)* to update the status.
 . Navigate to the *Saved Reports* accordion, and click the report when it is completed.
-. Click on the report download buttons for the type of export you want.
+. Click on the report download buttons for the type of export you want. The report is automatically named with the type of report and date.
 +
 * Click  image:textImage.png[] *(Download this report in text format)* to download as text.
-* Click  image:textImage.png[] *(Download this report in csv format)* to download as a comma-separated file.
+* Click  image:textImage.png[] *(Download this report in CSV format)* to download as a comma-separated file.
 * Click  image:2134.png[] *(Download this report in PDF format)* to download as PDF.
-* The report is automatically named with the type of report and date.
+
 
