--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -66,7 +66,7 @@ In OpenShift, the default deployment of the router generates certificates during
 * CVE URL that {product-title_short} requires to be open for OpenSCAP scanning: https://www.redhat.com/security/data/metrics/ds/. This information is based on the source code of OpenSCAP.
 ====
 +
-.. Enter the proxy information for the provider in *HTTP*, *HTTPS*, and *NO Proxy*.
+.. Enter the proxy information for the provider in either *HTTP*, *HTTPS*, or *NO Proxy* depending on your environment.
 .. Enter the *Image-Inspector Repository* information. For example, `openshift3/image-inspector`.
 .. Enter the *Image-Inspector Registry* information. For example, `registry.access.redhat.com`.
 .. Enter the *Image-Inspector Tag* value. A tag is a mark used to differentiate images in a repository, typically by the application version stored in the image.
