--- a/common/openscap/openscap-overview.adoc
+++ b/common/openscap/openscap-overview.adoc
@@ -4,9 +4,9 @@ OpenSCAP is an auditing tool used for hardening the security of your enterprise.
 
 [NOTE]
 ====
-* See Red Hat’s Security Data page for more details about this content. In particular, the SCAP source data stream files index provides examples of security advisories used by the built-in OpenSCAP policy profile. Each of these security advisories have a severity ranging from low to critical. With the built-in OpenSCAP policy profile, any image that fails a security check against an advisory with at least a high severity is marked as non-compliant.             
+* See Red Hat’s link:https://www.redhat.com/security/data/metrics/[Security Data] page for more details about this content. In particular, the SCAP source data stream files index provides examples of security advisories used by the built-in OpenSCAP policy profile. Each of these security advisories have a severity ranging from low to critical. With the built-in OpenSCAP policy profile, any image that fails a security check against an advisory with at least a high severity is marked as non-compliant.             
 
-* For more information about control and compliance policies, and creating and assigning policy profiles in CloudForms, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/policies_and_profiles_guide/[Policies and Profiles Guide].
+* For more information about control and compliance policies, and creating and assigning policy profiles in {product-title_short}, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/policies_and_profiles_guide/[Policies and Profiles Guide].
 ====
 
 {product-title_short} can initiate scanning of container images in the following ways:
@@ -20,7 +20,7 @@ OpenSCAP is an auditing tool used for hardening the security of your enterprise.
 ====
 For image scanning to work, make sure your {product-title_short} appliance has the *SmartProxy* and *SmartState Analysis* roles enabled:
 
-. From the Settings menu, navigate to menu:Configuration[Server:EVM].
-. Make sure *SmartState Analysis* and *SmartProxy* roles are enabled.
+. From the Settings menu, navigate to menu:Configuration[Server].
+. Under Server Control, ensure *SmartState Analysis* and *SmartProxy* roles are enabled.
 ====
 
