Structural edits for a better flow and readability.

--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -30,34 +30,37 @@ ifdef::cfme[]
 . From the list of installers and images, click the *Download Now* link for *CFME EC2 Virtual Appliance*.
 endif::cfme[]
 
-[[uploading-the-appliance-on-amazon-ec2]]
-=== Uploading the Appliance to an Amazon S3 Bucket
+[[requirements]]
+=== Requirements
 
-Uploading the {product-title} appliance file onto Amazon EC2 has the following requirements:
+Below are the two sets of requirements for intalling {product-title} on Amazon EC2.
+
+==== {product-title_short} Requirements
 
 * 44 GB of space on the chosen datastore.
 * 12 GB RAM.
 * 4 vCPUs.
-* Depending on your infrastructure, allow time for the upload.
-* Prerequisites on Amazon EC2: 
-** An Amazon S3 bucket to store disk images.
-** A VM import service role (IAM role) named `vmimport`. 
-** See xref:prerequisite-steps-on-amazon-ec2[].
 
-.Uploading the appliance image:
+==== Amazon EC2 Requirements
 
-. Upload to the Amazon S3 Bucket the {product-title} appliance VHD image obtained in xref:obtaining-the-appliance[] from your local file system using your choice of tool.
+* An Amazon S3 bucket to store disk images.
+* A VM import service role (IAM role) named `vmimport`. 
+
+For information on creating an Amazon S3 bucket and a VM Import Service Role, see the link:https://docs.aws.amazon.com/vm-import/latest/userguide/vmimport-image-import.html[Amazon EC2 documentation].
+
+[[uploading-the-appliance-on-amazon-ec2]]
+=== Uploading the Appliance to an Amazon S3 Bucket
+
+From your local file system, you can now upload to the Amazon S3 bucket the {product-title_short} appliance VHD image obtained in xref:obtaining-the-appliance[] using your choice of tool.
 
 
-[[prerequisite-steps-on-amazon-ec2]]
-==== Prerequisite Steps on Amazon EC2
+[[configure-ec2-import-appliance]]
+=== Configuring Amazon EC2 to Import the Appliance
 
 [IMPORTANT]
 ====
-These are the prerequisites and procedural steps as of the time of writing. For more information on creating an Amazon S3 Bucket and VM Import Service Role, see the link:https://docs.aws.amazon.com/vm-import/latest/userguide/vmimport-image-import.html[Amazon EC2 documentation].
+These are the procedural steps as of the time of writing. For the latest information on importing a virtual machine as an image, see the link:https://docs.aws.amazon.com/vm-import/latest/userguide/vmimport-image-import.html[Amazon EC2 documentation].
 ====
-
-Complete the following prerequisite steps on AWS:
 
 . Install the AWS client on the computer you want to interact with the AWS API from.
 +
@@ -66,10 +69,9 @@ $ pip install awscli
 ----
 +
 . Configure and download your AWS secret/access key by following the steps in the link:https://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html[Managing Access Keys for Your AWS Account] documentation.
-. Configure the AWS client with your access/secret key.
+. Configure the AWS client with your access/secret key. For example:
 +
 ----
-Example:
 
 $ aws configure
 AWS Access Key ID [******]: ACCESS_KEY
@@ -100,7 +102,7 @@ Example:
 }
 ----
 +
-. Create the *vmimport* role using the `trust-policy.json` file that we just created.
+. Create the *vmimport* role using the `trust-policy.json` file that you just created.
 +
 ----
 $ aws iam create-role --role-name vmimport --assume-role-policy-document file://trust-policy.json
@@ -110,10 +112,9 @@ $ aws iam create-role --role-name vmimport --assume-role-policy-document file://
 ====
 This user must have permissions to create and modify IAM roles.
 ====
-. Create the `role-policy.json` file. Be sure to use the exact image name that you uploaded to the S3 Bucket.
+. Create the `role-policy.json` file. Be sure to use the exact image name that you uploaded to the S3 bucket. For example:
 +
 ----
-Example:
 
 {
    "Version": "2012-10-17",
@@ -153,18 +154,12 @@ Example:
 }
 ----
 +
-. Apply the *vmimport* role to the {product-title_short} appliance image you uploaded to the S3 Bucket.
+. Apply the *vmimport* role to the {product-title_short} appliance image you uploaded to the S3 bucket.
 +
 ----
 $ aws iam put-role-policy --role-name vmimport --policy-name vmimport --policy-document file://role-policy.json
 ----
 +
-
-
-
-
-
-
 
 
 [[importing-the-appliance-on-amazon-ec2]]
