Fixed typo, sentence fix
Fixed a typo and rearranged a sentence with a lot of info in it for readability.

--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -33,7 +33,7 @@ endif::cfme[]
 [[requirements]]
 === Requirements
 
-Below are the two sets of requirements for intalling {product-title} on Amazon EC2.
+Below are the two sets of requirements for installing {product-title} on Amazon EC2.
 
 ==== {product-title_short} Requirements
 
@@ -51,7 +51,7 @@ For information on creating an Amazon S3 bucket and a VM Import Service Role, se
 [[uploading-the-appliance-on-amazon-ec2]]
 === Uploading the Appliance to an Amazon S3 Bucket
 
-From your local file system, you can now upload to the Amazon S3 bucket the {product-title_short} appliance VHD image obtained in xref:obtaining-the-appliance[] using your choice of tool.
+From your local file system, you can now upload the {product-title_short} appliance VHD image obtained in xref:obtaining-the-appliance[] to the Amazon S3 bucket, using your choice of tool.
 
 
 [[configure-ec2-import-appliance]]
@@ -80,10 +80,9 @@ Default region name [None]:
 Default output format [None]:
 ----
 +
-. Create the `trust-policy.json` file for the *vmimport* role.
+. Create the `trust-policy.json` file for the *vmimport* role. For example:
 +
 ----
-Example:
 
 {
    "Version": "2012-10-17",
