moved container object content to the more relevant guide; moved related images; needs test building to verify the structure is ok

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
@@ -3,6 +3,9 @@
 
 // Should this be in Managing Providers, or Managing Infrastructure and Inventory?
 
+:leveloffset: 2
+include::Managing_Containers.adoc[]
+
 == Configuring Automatic Tagging for Container Entities
 
 Container object labels in OpenShift can be used to automatically create tags and tag categories in {product-title}. This is done by mapping {product-title} tags to existing OpenShift or Kubernetes labels.
