--- a/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Containers.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Containers.adoc
@@ -1,27 +1,6 @@
-= The Container Overview Page
+= The Containers Overview Page
 
 Navigate to menu:Compute[Containers > _Object_] to view information on many different container objects. 
-
-[[cross-providers-insight]]
-== Cross-Providers Insight
-
-Cross-providers insight is a feature that connects all layers of infrastructure, cloud, and containers known to {product-title} and collects data for analysis.
-
-It supports cross-linking all of the layers available in the following environments:
-
-* OpenStack
-* Red Hat Virtualization
-* VMware vCenter
-* Amazon EC2
-* Google Cloud Engine
-
-The collected information includes all the data available in other (infrastructure or cloud) providers.
-
-[NOTE]
-====
-For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Container Platform Installation and Configuration Guide], ensuring you use the desired version of OpenShift.
-====
-
 
 [[working-with-the-containers-overview-page]]
 == Working with the Containers Overview Page
