moved container object content to the more relevant guide; moved related images; needs test building to verify the structure is ok

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -35,6 +35,27 @@ This guide covers working with providers and managers in {product-title_short}, 
 
 For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
 
+[[cross-providers-insight]]
+== Cross-Providers Insight
+
+Cross-providers insight is a feature that connects all layers of infrastructure, cloud, and containers known to {product-title} and collects data for analysis.
+
+It supports cross-linking all of the layers available in the following environments:
+
+* OpenStack
+* Red Hat Virtualization
+* VMware vCenter
+* Amazon EC2
+* Google Cloud Engine
+
+The collected information includes all the data available in other (infrastructure or cloud) providers.
+
+[NOTE]
+====
+For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Container Platform Installation and Configuration Guide], ensuring you use the desired version of OpenShift.
+====
+
+
 
 :leveloffset: 1
 include::topics/Infrastructure_Providers.adoc[]
