Modified step - conditionalized for upstream.

--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -14,5 +14,11 @@ Complete the following procedure to add an Amazon EC2 cloud provider in {product
   The *Access Key ID* acts as your *User ID*, and your *Secret Access Key* acts as your *Password*.
 .. Click *Validate* to validate the credentials.
 . Click the *SmartState Docker* tab.
-.. Enter the *SmartState Docker User Name* and *SmartState Docker Password*. Here use your RHN credentials required to perform SmartState analysis on AWS. These credentials are required so that you can pull the image from the Red Hat docker registry.
+.. Enter the *SmartState Docker User Name* and *SmartState Docker Password*. 
+ifdef::cfme[] 
+Here use your `registry.access.redhat.com` credentials required to perform SmartState analysis on AWS. These credentials are required so that you can pull the image from the Red Hat docker registry. 
+endif::cfme[] 
+ifdef::miq[]
+Here use your docker registry credentials required to perform SmartState analysis on AWS. These credentials are required so that you can pull the image from the docker registry.
+endif::miq[]
 . Click *Add*.
