--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -1,12 +1,13 @@
 [[installing-cloudforms-aws]]
 == Installing {product-title}
 
-{product-title} is able to be installed and ready to configure in a few quick steps. After downloading {product-title} as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a supported virtualization or cloud provider.
+Installing {product-title} consists of the following steps:
 
-[IMPORTANT]
-====
-After installing the {product-title} appliance, you must configure the database for {product-title}. See xref:configuring_a_database[].
-====
+. Downloading the appliance for your environment as a virtual machine image template.
+. Setting up a virtual machine based on the appliance.
+. Configuring the {product-title_short} appliance.
+
+After you have completed all the procedures in this guide, you will have a working environment on which additional customizations and configurations can be performed.
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
@@ -25,32 +26,144 @@ ifdef::cfme[]
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
 . Click *Downloads* in the menu bar.
 . Click *A-Z* to sort the product downloads alphabetically.
-. Click menu:Red Hat CloudForms[Download Latest] to access the product download page.
-. From the list of installers and images, select the *CFME EC2 Virtual Appliance* download link.
+. Click *Red Hat CloudForms* to access the product download page.
+. From the list of installers and images, click the *Download Now* link for *CFME EC2 Virtual Appliance*.
 endif::cfme[]
+
+[[requirements]]
+=== Requirements
+
+Below are the two sets of requirements for installing {product-title} on Amazon EC2.
+
+==== {product-title_short} Requirements
+
+* 44 GB of space on the chosen datastore.
+* 12 GB RAM.
+* 4 vCPUs.
+
+==== Amazon EC2 Requirements
+
+* An Amazon S3 bucket to store disk images.
+* A VM import service role (IAM role) named `vmimport`. 
+
+For information on creating an Amazon S3 bucket and a VM Import Service Role, see the link:https://docs.aws.amazon.com/vm-import/latest/userguide/vmimport-image-import.html[Amazon EC2 documentation].
 
 [[uploading-the-appliance-on-amazon-ec2]]
 === Uploading the Appliance to an Amazon S3 Bucket
 
-Uploading the {product-title} appliance file onto Amazon EC2 has the following requirements:
+From your local file system, you can now upload the {product-title_short} appliance VHD image obtained in xref:obtaining-the-appliance[] to the Amazon S3 bucket, using your choice of tool.
 
-* 44 GB of space on the chosen datastore.
-* 12 GB RAM.
-* 4 VCPUs.
-* An Amazon S3 bucket to store disk images.
-* A VM import service role (IAM role) named `vmimport`. 
-* Depending on your infrastructure, allow time for the upload.
 
-To upload the image:
+[[configure-ec2-import-appliance]]
+=== Configuring Amazon EC2 to Import the Appliance
 
-. Upload to the Amazon S3 Bucket the {product-title} appliance VHD image from your local file system using your choice of tool.
+[IMPORTANT]
+====
+These are the procedural steps as of the time of writing. For the latest information on importing a virtual machine as an image, see the link:https://docs.aws.amazon.com/vm-import/latest/userguide/vmimport-image-import.html[Amazon EC2 documentation].
+====
 
+. Install the AWS client on the computer you want to interact with the AWS API from.
++
+----
+$ pip install awscli
+----
++
+. Configure and download your AWS secret/access key by following the steps in the link:https://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html[Managing Access Keys for Your AWS Account] documentation.
+. Configure the AWS client with your access/secret key. For example:
++
+----
+
+$ aws configure
+AWS Access Key ID [******]: ACCESS_KEY
+AWS Secret Access Key [******]: SECRET_KEY
+Default region name [None]:
+Default output format [None]:
+----
++
+. Create the `trust-policy.json` file for the *vmimport* role. For example:
++
+----
+
+{
+   "Version": "2012-10-17",
+   "Statement": [
+      {
+         "Effect": "Allow",
+         "Principal": { "Service": "vmie.amazonaws.com" },
+         "Action": "sts:AssumeRole",
+         "Condition": {
+            "StringEquals":{
+               "sts:Externalid": "vmimport"
+            }
+         }
+      }
+   ]
+}
+----
++
+. Create the *vmimport* role using the `trust-policy.json` file that you just created.
++
+----
+$ aws iam create-role --role-name vmimport --assume-role-policy-document file://trust-policy.json
+----
++
 [NOTE]
 ====
-These are the prerequisites and procedural steps as of the time of writing. For more information on creating an Amazon S3 Bucket and VM Import Service Role, consult the Amazon EC2 documentation.
+This user must have permissions to create and modify IAM roles.
 ====
+. Create the `role-policy.json` file. Be sure to use the exact image name that you uploaded to the S3 bucket. For example:
++
+----
+
+{
+   "Version": "2012-10-17",
+   "Statement": [
+      {
+         "Effect": "Allow",
+         "Action": [
+            "s3:ListBucket",
+            "s3:GetBucketLocation",
+            "s3:FullAccess"
+         ],
+         "Resource": [
+            "arn:aws:s3:::NAME_OF_IMAGE_IN_S3_BUCKET"
+         ]
+      },
+      {
+         "Effect": "Allow",
+         "Action": [
+            "s3:GetObject"
+         ],
+         "Resource": [
+            "arn:aws:s3:::NAME_OF_IMAGE_IN_S3_BUCKET/*"
+         ]
+      },
+      {
+         "Effect": "Allow",
+         "Action":[
+            "ec2:ModifySnapshotAttribute",
+            "ec2:CopySnapshot",
+            "ec2:RegisterImage",
+            "ec2:Describe*",
+            "ec2:FullAccess"
+         ],
+         "Resource": "*"
+      }
+   ]
+}
+----
++
+. Apply the *vmimport* role to the {product-title_short} appliance image you uploaded to the S3 bucket.
++
+----
+$ aws iam put-role-policy --role-name vmimport --policy-name vmimport --policy-document file://role-policy.json
+----
++
+
+
 [[importing-the-appliance-on-amazon-ec2]]
 === Importing the Appliance to Amazon Elastic Compute Cloud (Amazon EC2)
+
 To import the appliance:
 
 . Create a containers.json file: 
