created new topic for cross-providers insight and rearranged; added pointer to content which is now in the Managing Infra guide

--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -18,6 +18,11 @@ When {product-title_short} connects to a container's environment, it collects in
 
 You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
 
+[NOTE]
+====
+This chapter provides details on managing containers providers. For details on working with the resources within a container environment, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_infrastructure_and_inventory/#container_entities[Container Entities] in _Managing Infrastructure and Inventory_.
+====
+
 The {product-title_short} user interface uses virtual thumbnails to represent container providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider:
 
