--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -18,6 +18,30 @@ When {product-title_short} connects to a container's environment, it collects in
 
 You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
 
+[NOTE]
+====
+This chapter provides details on managing containers providers. For details on working with the resources within a container environment, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/managing_infrastructure_and_inventory/#container_entities[Container Entities] in _Managing Infrastructure and Inventory_.
+====
+
+The {product-title_short} user interface uses virtual thumbnails to represent container providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider:
+
+image:cp-quad-icon.png[]
+
+. Number of nodes
+. Container provider software
+. Power state
+. Authentication status
+
+.Container provider authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
 
 :leveloffset: 2
 [[Obtaining_OpenShift_Container_Platform_Management_Token]]
