resolve merge conflict

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
@@ -1,4 +1,5 @@
-= Tagging Security Groups
+[[tagging-security-group]]
+=== Tagging Security Groups
 
 Apply tags to security groups to categorize them.
 
