--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
@@ -1,4 +1,6 @@
-= Viewing Security Groups
+[[viewing-security-group]]
+
+=== Viewing Security Groups
 
 This procedure describes how to view security groups. 
 
