--- a/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
@@ -1,10 +1,72 @@
 [[container_entities]]
 = Container Entities
 
-// Should this be in Managing Providers, or Managing Infrastructure and Inventory?
+This chapter provides information on managing resources on  your containers providers.
 
-:leveloffset: 2
-include::Managing_Containers.adoc[]
+== The Containers Overview Page
+
+The containers overview page shows information on all containers providers and entities known to {product-title_short}. The *Overview* page provides links to other summary pages which contain further information on the containers providers and entities.
+The *Overview* page also provides metrics for *Aggregated Node Utilization*, *Network Utilization Trend*, *New Image Usage Trend*, *Node Utilization*, and *Pod Creation and Deletion Trends*.
+
+
+[caption="Containers Overview"]
+image:containers-overview.png[Containers Overview]
+
+.Working with the Containers Overview Page
+. Navigate to menu:Compute[Containers > Overview].
+. Click the desired containers entity, or provider, if applicable, for viewing the summary with further information.
+
+[NOTE]
+====
+To reliably associate pods and images, {product-title_short} requires information from the `docker-pullable` field, added in OpenShift 3.3.1.2. This can affect the results of the *Chargeback by Image* report for older OpenShift providers, and potentially cause image inspection (done as part of Smart State Analysis) to fail due to associating a container to the wrong image.
+Consequently, {product-title_short} may not report accurate information about pods and images in OpenShift providers before version 3.3.1.2.
+====
+
+include::Viewing_an_Object_Summary.adoc[]   
+
+[[using-the-topology-widget]]
+== Using the Topology Widget
+
+The *Topology* widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers and projects to which {product-title} has access.
+
+* The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
+include::common/topology_widget.adoc[]
+
+=== Viewing the Topology for Container Providers
+. Navigate to menu:Compute[Containers > Providers].
+. Click the desired containers provider for viewing the provider summary.
+. On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
+
+=== Viewing the Topology for Container Provider Projects
+The project topology page displays the project as the center node, surrounded by its related entities. 
+
+. Navigate to menu:Compute[Containers > Projects].
+. Click on a project.
+. On the project summary page, click image:topologyviewbutton.png[Topology View button] (*Topology View*) on the top right-hand side of the page. 
+
+=== Limiting the Number of Containers Shown in the Topology View
+. Navigate to the settings menu, then *My Settings*, and click on the *Visual* tab.
+. Select the number of container items from the drop-down under *Topology Default Items in View*.
+. Click *Save*.
+
+[[running-a-smartstate-analysis]]
+== Analyzing Container Images with SmartState Analysis
+
+Perform a SmartState Analysis of a container image to inspect the packages included in an image.
+
+.Running a SmartState Analysis
+. Navigate to menu:Compute[Containers > Container Images].
+. Check the container image to analyze. You can check multiple images.
+. Click  image:1847.png[Configuration] (*Configuration*), and then  image:1942.png[Perform SmartState Analysis] (*Perform SmartState Analysis*).
+
+The container image is scanned. The process will copy over any required files for the image. After reloading the image page, all new or updated packages are listed.
+
+To monitor the status of container image SmartState Analysis tasks, navigate to the settings menu, then *Tasks*. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
+
+[NOTE]
+====
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/scanning_container_images_in_cloudforms_with_openscap/[_Scanning Container Images in CloudForms with OpenSCAP_] for details on scanning container images using OpenSCAP policies.
+====
 
 == Configuring Automatic Tagging for Container Entities
 
@@ -45,7 +107,6 @@ image:OCPnode-summary.png[]
 To create an OpenShift label, see https://docs.openshift.com/container-platform/3.3/cli_reference/basic_cli_operations.html[Developer CLI Operations] in the OpenShift Container Platform _CLI Reference_ guide. A new label added in OpenShift will only show up in {product-title} after the next OpenShift provider refresh.
 ====
 +
-// Demo 53:00
 . Navigate to *Configuration* and select the region.
 . Click the *Map Tags* tab.
 . Click *Add* to create a new mapping rule.
