--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -17,7 +17,10 @@ include::common/attributes/miq.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
+
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
 
 === Changing the Default Login Password
@@ -27,11 +30,4 @@ include::common/initial-login-changepw.adoc[]
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
 
-[appendix]
-[[appendix]]
-== Appendix
-
-[[appliance-console-cli]]
-=== Appliance Console Command-Line Interface (CLI)
-include::common/appe-appliance-console-cli.adoc[]
 
