--- a/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
@@ -4,9 +4,14 @@
 This section includes common tasks to manage your {product-title} deployment from OpenShift.
 
 [[configuring-ssl]]
-=== Configuring custom SSL certificates for {product-title_short}
+=== Configuring Custom SSL Certificates for {product-title_short}
 
-By default the route that is deployed as part of the template uses edge termination and the certificates that Openshift is installed with.  It is possible to change this in the Openshift UI by navigating to "Applications" -> "Routes", clicking on the route named "httpd", then selecting "Actions" -> "Edit".  Scroll down to the "Certificates" section, Here you can upload or paste the required certificate files, then click "Save".
+By default, the route that is deployed as part of the template uses edge termination and the certificates that OpenShift is installed with. It is possible to change this in the OpenShift UI with the following steps:
+
+. Navigate to menu:Applications[Routes].
+. Click on the route named *httpd*, then select menu:Actions[Edit]. 
+. Scroll down to the *Certificates* section. Here you can upload or paste the required certificate files.
+. Click "Save".
 
 
 [[scaling]]
