--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_an_Object_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_an_Object_Summary.adoc
@@ -1,4 +1,4 @@
-== Viewing an Container Entity Summary
+== Viewing a Container Entity Summary
 
 Container entity (object) summaries are found at menu:Compute[Containers > _Entity_], where you can view information about container entities and their components.
 
