Changed "right-hand" to "right" per IBM style guide.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
@@ -35,14 +35,14 @@ include::common/topology_widget.adoc[]
 === Viewing the Topology for Container Providers
 . Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
-. On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
+. On the provider summary page, click *Topology* in the *Overview* box on the right side of the page.
 
 === Viewing the Topology for Container Provider Projects
 The project topology page displays the project as the center node, surrounded by its related entities. 
 
 . Navigate to menu:Compute[Containers > Projects].
 . Click on a project.
-. On the project summary page, click image:topologyviewbutton.png[Topology View button] (*Topology View*) on the top right-hand side of the page. 
+. On the project summary page, click image:topologyviewbutton.png[Topology View button] (*Topology View*) on the top right side of the page. 
 
 === Limiting the Number of Containers Shown in the Topology View
 . Navigate to the settings menu, then *My Settings*, and click on the *Visual* tab.
