work-in-progress addition of external auth/httpd config content to podify guide'

--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -20,6 +20,9 @@ include::topics/installation.adoc[]
 [[Configuration]]
 include::common/configuration.adoc[]
 
+[[External-Authentication-Configuration]]
+include::configuring_external_auth_ocp.adoc[]
+
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
 
