--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -19,6 +19,9 @@ include::topics/installation.adoc[]
 
 include::common/configuration.adoc[]
 
+[[External-Authentication-Configuration]]
+include::configuring_external_auth_ocp.adoc[]
+
 [[Post-Installation]]
 include::topics/post-installation.adoc[]
 
