added SSL certs content to guide

--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -17,6 +17,20 @@ include::common/attributes/miq.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
+[[post-installation]]
+== Managing {product-title} with OpenShift
+
+This section includes common tasks to manage your {product-title} deployment from OpenShift.
+
+[[configuring-ssl]]
+=== Configuring Custom SSL Certificates for {product-title_short}
+
+By default, the route that is deployed as part of the template uses edge termination and the certificates that OpenShift is installed with. It is possible to change this in the OpenShift UI with the following steps:
+
+. Navigate to menu:Applications[Routes].
+. Click on the route named *httpd*, then select menu:Actions[Edit]. 
+. Scroll down to the *Certificates* section. Here you can upload or paste the required certificate files.
+. Click *Save*.
 
 [[Initial_Login]]
 == Logging In After Installing {product-title}
