--- a/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
@@ -11,7 +11,7 @@ By default, the route that is deployed as part of the template uses edge termina
 . Navigate to menu:Applications[Routes].
 . Click on the route named *httpd*, then select menu:Actions[Edit]. 
 . Scroll down to the *Certificates* section. Here you can upload or paste the required certificate files.
-. Click "Save".
+. Click *Save*.
 
 
 [[scaling]]
