created new section for enabling events with cloudtrail and cloudwatch in AWS; added xref tag to AWG config section for crosslinking

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -18,7 +18,7 @@ image:Cloudthumbnail.png[]
 
 [cols="1,1", frame="all", options="header"]
 |===
-|		Icon  |	Description 
+|		Icon  |	Description
 | image:2190.png[] | Validated: Valid authentication credentials have been added.
 | image:2191.png[] | 	Invalid: Authentication credentials are invalid.
 | image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
@@ -71,6 +71,9 @@ include::Enabling_Public_AMIs.adoc[]
 :leveloffset: 3
 include::Enabling_AWS_Config_Notifications.adoc[]
 
+:leveloffset: 3
+include::Enabling_Amazon_Events.adoc[]
+
 
 :leveloffset: 3
 include::Disabling_Amazon_Cloud_Regions.adoc[]
@@ -104,5 +107,3 @@ include::Editing_a_Cloud_Provider.adoc[]
 
 :leveloffset: 2
 include::Viewing_a_Cloud_Providers_Timeline.adoc[]
-
-
