Minor wording edit

--- a/art-Assigning_Custom_Analysis_Profile_to_VM/topics/To_assign_policy_profile_to_VM.adoc
+++ b/art-Assigning_Custom_Analysis_Profile_to_VM/topics/To_assign_policy_profile_to_VM.adoc
@@ -6,7 +6,7 @@ Assign the policy profile you created in xref:create-policy-profile-assign-vm-co
 
 [NOTE]
 ====
-Policy profiles can be specified at multiple levels. That is, if you assign this to a provider (Amazon EC2 or OpenStack for example), the policy profile will apply to all hosts or virtual machines for that provider.
+Policy profiles can be specified at multiple levels. If you assign a policy profile to a provider (Amazon EC2 or OpenStack for example), the profile will apply to all hosts or virtual machines for that provider.
 ====
 
 . Navigate to menu:Compute[Clouds > Instances] or menu:Compute[Infrastructure > Virtual Machines]. Select the virtual machine or instance.
