--- a/doc-Managing_Providers/topics/Amazon_EC2_Manual_Role_Creation.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Manual_Role_Creation.adoc
@@ -7,6 +7,6 @@ Use the following parameters:
 .. `AmazonEC2FullAccess`
 .. `AmazonS3FullAccess`
 .. `AmazonSQSFullAccess`
-. Input _smartstate_ for the *Role name*. 
+. Enter `smartstate` for the *Role name*. 
 
 Once the IAM role is created, assign the provider _Power User_ privileges as described in xref:amazon-provider-permissions[]. 
