converted markup language to asciidoc and structured chapter; created new file for SAML config reference file in appendix; some language edits; this needs more work

--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -21,7 +21,7 @@ include::topics/installation.adoc[]
 include::common/configuration.adoc[]
 
 [[External-Authentication-Configuration]]
-include::configuring_external_auth_ocp.adoc[]
+include::topics/configuring_external_auth_ocp.adoc[]
 
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
@@ -39,6 +39,11 @@ include::topics/troubleshooting.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+[[saml-authentication-example]]
+=== Sample External Authentication Configuration
+include::topics/appe-saml-authentication-example.adoc[]
+
 
 
 
